cart : update quantity

--- a/product/templates/product/cart.html
+++ b/product/templates/product/cart.html
@@ -36,7 +36,7 @@ Cart
         </div>
         <div id="cart-container"></div>
         <div class="continue mt-5">
-            <a href="/shop">
+            <a href="{% url 'product_list' %}">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i> Continue Shopping
             </a>
         </div>
