--- a/pages_static/templates/pages_static/index.html
+++ b/pages_static/templates/pages_static/index.html
@@ -265,7 +265,7 @@
             alt=""
           />
         </div>
-        <div class="container-lg py-2 m-md-5">
+        <div class="container-lg py-2">
           <div class="owl-carousel owl-theme">
             <div class="item">
               <div class="card">
