--- a/pages_static/static/pages_static/css/styles.css
+++ b/pages_static/static/pages_static/css/styles.css
@@ -15,6 +15,9 @@
   background-color: transparent;
 }
 
+.row{
+  width: 100%;
+}
 .st-btn-outline-red {
   border: 3px solid #8d0020;
   -webkit-box-sizing: border-box;
