--- a/user_manager/templates/user_manager/profile.html
+++ b/user_manager/templates/user_manager/profile.html
@@ -34,7 +34,7 @@
             <hr>
             <div class="row ">
                 <div class="col-3 text-center"><img class="l_img" src="/assets/img/order_logo.jpg" alt=""></div>
-                <div class="col-9 acc"><a href="{% url 'profile' %}" style='color: #333333;'>MY ORDER</a></div>
+                <div class="col-9 acc"><a href="{% url 'orders_tracking' %}" style='color: #333333;'>MY ORDER</a></div>
             </div>
             <hr>
             <div class="row ">
