--- a/pages_static/templates/pages_static/about.html
+++ b/pages_static/templates/pages_static/about.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class='col-lg-6 about-image-wrapper'>
-                    <img id='about-image' src="{% static 'pages_static/images/about/image1.png' %}" alt="">
+                    <img id='about-image' src="{% static 'pages_static/images/about/oct7753.svg' %}" alt="">
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                     </p>
                 </div>
                 <div class='row'>
-                    <img class='col-6 women-image' src="{% static 'pages_static/images/about/image2.png'%}" alt="">
+                    <img class='col-6 women-image' src="{% static 'pages_static/images/about/oct4674.svg'%}" alt="">
                     <img class='col-6 women-image' src="{% static 'pages_static/images/about/image3.png'%}" alt="">
                 </div>
             </div>
