--- a/product/templates/product/list.html
+++ b/product/templates/product/list.html
@@ -23,7 +23,7 @@ Products
             <button type="button" data-bs-target="#carouselShopIndicators" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner">
+        <div class="carousel-inner" style="text-align: -webkit-center;">
             <div class="carousel-item active">
                 <div class="overlay-container">
                     <img src="{% static 'products/img/Rectangle 120.png' %}" class="d-block w-100"
