--- a/user_manager/templates/user_manager/otp_check.html
+++ b/user_manager/templates/user_manager/otp_check.html
@@ -17,6 +17,7 @@
             {% csrf_token %}
             <h1>Enter OTP</h1>
             <p>Please enter OTP sent to <strong>{{email}}</strong></p>
+            <p>Otp is Valid for only 15 Minutes.</p>
             <fieldset>
                 <legend>Enter OTP</legend>
                 <div id='data-field'>
