--- a/user_manager/templates/user_manager/profile_add_address.html
+++ b/user_manager/templates/user_manager/profile_add_address.html
@@ -32,8 +32,12 @@ Add Address
             <input type="text" class='entry' name="city" id="city" class="form-control" placeholder="City">
         </div>
         <div class="form-group">
-            <label for="postalcode">Address</label>
+            <label for="postalcode">Postal Code</label>
             <input type="text" class='entry' name="postalcode" id="postalcode" class="form-control" placeholder="Postal Code">
+        </div>
+        <div class="form-group">
+            <label for="postalcode">Country</label>
+            <input type="text" class='entry' name="country" id="country" class="form-control" placeholder="country">
         </div>
         <button type="submit" class="continue">Submit</button>
     </form>
