--- a/user_manager/templates/user_manager/profile_edit_address.html
+++ b/user_manager/templates/user_manager/profile_edit_address.html
@@ -33,8 +33,12 @@ Add Address
             <input type="text" class='entry' name="city" id="city" class="form-control" placeholder="City" value="{{ address.city }}">
         </div>
         <div class="form-group">
-            <label for="postalcode">Address</label>
+            <label for="postalcode">Postal Code</label>
             <input type="text" class='entry' name="postalcode" id="postalcode" class="form-control" placeholder="Postal Code" value="{{ address.postal_code }}">
+        </div>
+        <div class="form-group">
+            <label for="postalcode">Country</label>
+            <input type="text" class='entry' name="country" id="country" class="form-control" placeholder="country">
         </div>
         <button type="submit" class="continue">Submit</button>
     </form>
